--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,6 @@
 #!/bin/bash
-
-docker build --build-arg SHA="$(git rev-parse HEAD)" -f $DOCKERFILE_PATH -t $IMAGE_NAME .
+docker build \
+       --build-arg SHA="$(git rev-parse HEAD)" \
+       --build-arg BUILDTIME="$(date -u '+%Y%m%dT%H%M%SZ')" \
+       -f "$DOCKERFILE_PATH" \
+       -t "$IMAGE_NAME" .
