--- a/example.yml
+++ b/example.yml
@@ -180,6 +180,9 @@ git:
   # Redact names and URLs for projects, repos, branches.
   redact_names_and_urls: False
 
+  # More verbose local logging (currently only available on Bitbucket Server).
+  verbose: False
+
 ######################################
 # 3b. Multiple instance config example
 #
