--- a/example.yml
+++ b/example.yml
@@ -8,7 +8,7 @@ global:
   no_verify_ssl: False
   # Set this to True if you would like to send your config.yml file to Jellyfish.
   # We use this as a diagnostic tool for customer assistance.
-  send_agent_config: False
+  send_agent_config: True
 
 #############################
 # 2. Jira configuration
