--- a/example.yml
+++ b/example.yml
@@ -178,6 +178,9 @@ git:
 
   # Uncomment this to pull commit data from each of the specified branches for each repository.
   # By default, we will pull commit data from only the default branch of a repository.
+  # 
+  # Note: This is currently only supported for Github users. BitBucket and Gitlab commits
+  # will only be pulled for the default branch of a repository
   # include_branches: 
   #    - my_repository: 
   #      - master
