Tweak wording in the comment for no_verify_ssl

--- a/example.yml
+++ b/example.yml
@@ -3,8 +3,10 @@
 #############################
 
 global:
-  # Set this to True to skip verification of server SSL certificates.
-  # This option is deprecated; see the README.md for how to trust custom certificates.
+  # Set this to True to skip verification of server SSL certificates.  This might
+  # be necessary if your Jira / Bitbucket server has an invalid or a custom
+  # certificate.  Or as an alternative, see the README.md for how to trust custom
+  # certificates.
   no_verify_ssl: False
   # Set this to True if you would like to send your config.yml file to Jellyfish.
   # We use this as a diagnostic tool for customer assistance.
