--- a/example.yml
+++ b/example.yml
@@ -31,7 +31,7 @@ jira:
   # not change it (regular, day-to-day runs of the agent will only pull issues
   # that have been created or updated since the last run).  Comment out or omit
   # to pull all issues into Jellyfish.
-  earliest_issue_dt: 2019-01-01
+  earliest_issue_dt: 2021-01-01
 
   # The number of concurrent threads the agent will use for downloading issue data.
   # It's unusual, but some Jira instances can be overwhelmed by more than one or
@@ -102,16 +102,13 @@ jira:
   # send to Jellyfish
   #############################
 
-  # Uncomment this to pull only specific fields on issues.
-  # include_fields:
-  #   - id
-  #   - summary
-
   # Uncomment this to pull all but specific fields on issues.
   # exclude_fields:
   #   - description
   #   - comment
 
+
+  # is_email_required
 
 #############################
 # 3. Git configuration
