--- a/Pipfile
+++ b/Pipfile
@@ -16,5 +16,8 @@ dateparser = "*"
 jsonstreams = "*"
 psutil = "*"
 python-gitlab = "*"
+pre-commit = "*"
+black = "~=19.10b0"
+click = "~=8.0.4"
 
 [dev-packages]
