Stop scanning baseline

--- a/.github/workflows/secrets-detect.yml
+++ b/.github/workflows/secrets-detect.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Install detect-secrets
         run: pip install detect-secrets
       - name: Run detect secrets.
-        run: git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep -v 'Pipfile.lock' | xargs detect-secrets-hook
+        run: git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep -v '.secrets.baseline' | grep -v 'Pipfile.lock' | xargs detect-secrets-hook
 
