OJ-27738-upgrade-python (#262)
* OJ-27738: update python version to 3 dot 10 dot 12

* OJ-27738: updating tools black config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.black]
 line-length = 100
 skip-string-normalization = true
-target_version = ['py37', 'py38']
+target_version = ['py310']
 include = '\.pyi?$'
 exclude = '''
 (
@@ -68,7 +68,7 @@ dependencies = [
     "click~=8.0.4",
     "requests>=2.31.0",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 readme = "README.md"
 license = {text = "MIT"}
 
