OJ-28807-at-py-test-via-pdm (#263)
* OJ-28807: install test dependencies and update test

* OJ-28807: relative path fix for file path problem

* OJ-28807: move pytest to dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.black]
 line-length = 100
 skip-string-normalization = true
-target_version = ['py310']
+target_version = ['py37', 'py38']
 include = '\.pyi?$'
 exclude = '''
 (
@@ -81,6 +81,7 @@ name = "pypi"
 [tool.pdm.dev-dependencies]
 dev = [
     "requests-mock",
+    "pytest>=7.4.0",
 ]
 
 [build-system]
