--- a/.github/workflows/endor.yml
+++ b/.github/workflows/endor.yml
@@ -1,9 +1,9 @@
 name: Endor Labs Dependency Scan
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 jobs:
   scan:
     permissions:
