--- a/.github/workflows/endor.yml
+++ b/.github/workflows/endor.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
+    - name: Install pdm
+      run: pip install --user pdm
+    - name: Install Dependencies
+      run: pdm sync
     - name: Endor Labs Scan Pull Request
       if: github.event_name == 'pull_request'
       uses: endorlabs/github-action@v1.1.1
