What if we convert

--- a/.github/workflows/endor.yml
+++ b/.github/workflows/endor.yml
@@ -17,8 +17,8 @@ jobs:
       uses: actions/checkout@v3
     - name: Install pdm
       run: pip install --user pdm
-    - name: Install Dependencies
-      run: pdm sync
+    - name: Convert pdm.lock to requirements.txt
+      run: pdm export -o requirements.txt 
     - name: Endor Labs Scan Pull Request
       if: github.event_name == 'pull_request'
       uses: endorlabs/github-action@v1.1.1
