--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ name = "pypi"
 dev = [
     "requests-mock",
     "pytest>=7.4.0",
+    "-e file:///${PROJECT_ROOT}/../jf_ingest#egg=jf-ingest",
 ]
 
 [project]
@@ -80,7 +81,6 @@ dependencies = [
     "click~=8.0.4",
     "requests>=2.31.0",
     "python-dotenv>=1.0.0",
-    "jf-ingest==0.0.66",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
