--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        pdm sync --dev
+        pip install pdm && pdm install --dev
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
