--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,17 @@
 repos:
   - repo: https://github.com/ambv/black
-    rev: 19.10b0
+    rev: 23.12.0
     hooks:
       - id: black
         language_version: python3.9
-        additional_dependencies: ["click==8.0.4"]
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.4.0
     hooks:
     -   id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
         exclude: Pipfile.lock
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: [ "--profile", "black", "--filter-files", "--line-length=100" ]
