--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,8 @@ repos:
     rev: 23.12.0
     hooks:
       - id: black
-        language_version: python3.9
+        args: [ "--profile", "black", "--filter-files", "--line-length=100" ]
+        language_version: python3.10
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.4.0
     hooks:
