--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,8 @@ name = "pypi"
 dev = [
     "requests-mock",
     "pytest>=7.4.0",
-    "black>=23.21.0",
-    "isort>=5.13.2",
+    "black==23.12.0",
+    "isort==5.12.0",
     "pre-commit>=3.6.0",
 ]
 
