--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,19 @@
 repos:
   - repo: https://github.com/ambv/black
-    rev: 19.10b0
+    rev: 24.4.2
     hooks:
       - id: black
-        language_version: python3.9
-        additional_dependencies: ["click==8.0.4"]
+        language_version: python3.10
+
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.4.0
     hooks:
     -   id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
         exclude: Pipfile.lock
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        args: [ "--profile", "black", "--filter-files", "--line-length=100" ]
