--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "jf-ingest==0.0.121",
     "structlog>=24.4.0",
+    "colorama>=0.4.6",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
