OJ-38433: endor labs fix

--- a/.github/workflows/endor.yml
+++ b/.github/workflows/endor.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
+    - name: Install pre-reqs
+      run: pip install --user pdm
     - name: Endor Labs Scan Pull Request
       if: github.event_name == 'pull_request'
       uses: endorlabs/github-action@v1.1.1
