--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "structlog>=24.4.0",
     "colorama>=0.4.6",
-    "jf-ingest==0.0.157",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
@@ -38,11 +37,7 @@ name = "pypi"
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "requests-mock",
-    "pytest>=7.4.0",
-    "black==24.4.2",
-    "isort==5.13.2",
-    "pre-commit>=3.6.0",
+    "-e file:///${PROJECT_ROOT}/../jf_ingest#egg=jf-ingest",
 ]
 
 [tool.pdm.options]
