--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -25,7 +25,7 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        pip install pdm && pdm install --dev
+        sudo apt-get install libkrb5-dev && pip install pdm && pdm install --dev
     - name: Tests (pytest)
       run: |
         pdm run python -m pytest
