--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "colorama>=0.4.6",
     "jf-ingest==0.0.206",
 ]
-requires-python = ">=3.10"
+requires-python = "~=3.10.15"
 readme = "README.md"
 license = {text = "MIT"}
 
