--- a/.sonar-project.properties
+++ b/.sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.properties.exampleValue=123
-sonar.properties.projectName=jf_agent
-sonar.properties.test=false
+sonar.analysis.exampleValue=123
+sonar.analysis.projectName=jf_agent
+sonar.analysis.test=false
