revert to python 3.12.11 due to 3.12.12 not available on mac

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,14 @@ dependencies = [
 ]
 requires-python = ">=3.12,<3.13"
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 
 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["jf_agent"]
 
 [tool.isort]
 profile = "black"
