--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["jf_agent"]
+packages = {find = {include = ["jf_agent*"]}}
 
 [tool.isort]
 profile = "black"
