--- a/example.yml
+++ b/example.yml
@@ -26,12 +26,17 @@ jira:
   gdpr_active: False
 
   # The earliest date for pulling issues into Jellyfish (format: YYYY-MM-DD).
-  # Most companies want at least a year's worth of issues pulled into Jellyfish.
-  # You'll generally just need to set this once, at onboarding time, and then
-  # not change it (regular, day-to-day runs of the agent will only pull issues
-  # that have been created or updated since the last run).  Comment out or omit
-  # to pull all issues into Jellyfish.
-  earliest_issue_dt: 2023-01-01
+  # We recommend you set this date to pull back data from one year ago, relative 
+  # to when you first set up the agent. For example, if the current date is 2026-01-01, 
+  # and you want to pull back one year of data, set this to 2025-01-01.
+  # 
+  # WARNING: After setting this date, do not move it "forward" in time.
+  # Moving the date forward (from 2025 to 2026, for example) will cause 
+  # the agent to delete data that was previously pulled, and that data 
+  # will not be backfilled in future runs.
+  #
+  # We recommend that you DO NOT ALTER THIS DATE after your initial setup!
+  earliest_issue_dt: 2025-01-01
 
   # The number of concurrent threads the agent will use for downloading issue data.
   # It's unusual, but some Jira instances can be overwhelmed by more than one or
