--- a/example.yml
+++ b/example.yml
@@ -26,12 +26,12 @@ jira:
   gdpr_active: False
 
   # The earliest date for pulling issues into Jellyfish (format: YYYY-MM-DD).
-  # Most companies want at least a year's worth of issues pulled into Jellyfish.
-  # You'll generally just need to set this once, at onboarding time, and then
-  # not change it (regular, day-to-day runs of the agent will only pull issues
-  # that have been created or updated since the last run).  Comment out or omit
-  # to pull all issues into Jellyfish.
-  earliest_issue_dt: 2023-01-01
+  # We recommend setting this to pull back data from one year ago. For example,
+  # if the current date is 2026-01-01, set this to 2025-01-01.
+  #
+  # WARNING: Moving this date forward will delete any issues older than the new date.
+  # Once set, be careful when modifying this value to avoid unintended data loss.
+  earliest_issue_dt: 2025-01-01
 
   # The number of concurrent threads the agent will use for downloading issue data.
   # It's unusual, but some Jira instances can be overwhelmed by more than one or
